--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ if (allowOverride) {
       .container {
         padding: 5px;
       }
+      .site-wrapper{border: none;}
     }
 header{
       color: white;
@@ -153,7 +154,7 @@ header{
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
       outline: none;
       transition: box-shadow 0.3s ease;
-      width: calc(100% - 66px);
+      width: calc(100% - 64px);
       max-width: 800px;
      background: rgba(255,255,255,0.1);
       color: white;
