--- a/index.html
+++ b/index.html
@@ -2,22 +2,7 @@
 <html lang="en">
 <head>
   <title>GamesLand | Modded Games for Android & iOS</title>
-  <script>
-fetch('https://lite.thsite.top/iphub-check.php')
-  .then(res => {
-    if (!res.ok) throw new Error(`HTTP error ${res.status}`);
-    return res.json();
-  })
-  .then(data => {
-    if (data.isVpn) {
-      window.location.href = 'https://google.com'; // redirect if VPN
-    } else {
-      console.log('Welcome non-VPN user');
-    }
-  })
-  .catch(err => console.error('Fetch failed:', err));
-</script>
- <!-- <script type="module">
+ <script type="module">
   async function blockByCountry() {
     try {
       // ✅ Check if override is present in URL
@@ -44,47 +29,12 @@ if (allowOverride) {
         window.location.href = 'https://wikipedia.com';
         return;
       }
-      fetch('http://lite.thsite.top/iphub-check.php')
-  .then(res => res.json())
-  .then(data => {
-    if (data.isVpn) {
-      window.location.href = 'https://www.google.com';
-    } else {
-      console.log('Welcome! You are not using VPN.');
-    }
-  })
-  .catch(err => {
-    console.error('Error:', err);
-  });
-      
-    //check for VPN/proxy using IPHub
-    /*  const iphubRes = await fetch(`https://v2.api.iphub.info/ip/${userIP}`, {
-        method: 'GET',
-        headers: {
-          'X-Key': IPHUB_API_KEY
-        }
-      });
-
-      const iphubData = await iphubRes.json();
-      console.log('🛡️ IPHub Response:', iphubData);
-
-      // block = 1 means VPN/Proxy/Hosting
-      if (iphubData.block === 1) {
-        alert('Access blocked: VPN or proxy detected.');
-        window.location.href = '/access-denied.html';
-        return;
-      }else{console.log('allowed user.')}
-
-      // If no blocks triggered
-      console.log('✅ Access allowed.');
-*/
     } catch (error) {
       console.error('❌ Error during access check:', error);
     }
   }
-
   await blockByCountry();
-</script> -->
+</script>
 <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="description" content="GamesLand provides safe, updated modded games for Android and iOS. Unlock premium features, unlimited resources, and enjoy enhanced gameplay for free.">
@@ -397,9 +347,9 @@ header{
       padding: 10px 15px;
       font-size: 14px;
       cursor: pointer;
-      border: 1px solid #ccc;
-      background-color: #bfff00;
-      color: #e1e1e;
+      border: 1px solid #73ada3;
+      background: linear-gradient(1deg, #0e6c5b, #00be98);
+      color: #f5fff9;
       border-radius: 4px;
     }
 
