--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ header{
       position: relative;
       border: none;
       border-radius: 15px;
-      width: 100℅;
+      width: 100%;
       max-width: 800px;
     }
 
@@ -444,7 +444,7 @@ header{
 
 .modal-content {
  /* flex: 1;*/
-  width: 100℅;
+  width: 100%;
   max-width: 800px;
   display: flex;
   align-items: flex-start;
