--- a/index.html
+++ b/index.html
@@ -1266,7 +1266,9 @@ window.addEventListener("popstate", () => {
   currentPage = parseInt(new URLSearchParams(window.location.search).get("page")) || 1;
   renderGamesPage();
 });
-    fetch("https://data.axen.workers.dev")
+    fetch("https://data.axen.workers.dev",{method: "GET",
+        headers: {"Content-Type": "application/json"}
+      })
     .then(response => response.json())
     .then(data => {
       allGames = data.record;
@@ -1276,7 +1278,7 @@ window.addEventListener("popstate", () => {
     })
     .catch(error => {
       console.error("Error loading data:", error);
-      document.getElementById("gamesContainer").innerText = "Failed to load data.";
+      document.getElementById("gamesContainer").innerHTML = `<p style="text-align:center;font-size:18px;">Failed to load data.</p>`;
     });
     // guide Installation
       function toggleGuide() {
