--- a/download.html
+++ b/download.html
@@ -232,7 +232,7 @@ ol,ul {
       </div>
       </div>
     <footer>
-      <span>&copy; 2025 <span style="color:var(--primary-color);text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.25)">GamesLand</span> - v1.0.5</span>
+      <span>&copy; 2025 GamesLand</span>
     </footer>
   </div>
 <script>
