--- a/index.html
+++ b/index.html
@@ -965,7 +965,7 @@ header{
       </div>
     </div>
   </div>
-    <footer><span>&copy; 2025 <span style="color:var(--primary-color);text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.25)">GamesLand</span> - v1.0.5</span></footer>
+    <footer><span>&copy; 2025 GamesLand</span></footer>
     <!-- Modal overlay -->
 <div id="cardModal" class="modal">
   <div class="modal-header">
