Update file via uploader

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@ if (allowOverride) {
       if (!data.success) {
         throw new Error('Geolocation lookup failed');
       }
-      const IPHUB_API_KEY = '';
       const blockedCountryCodes = ["EG", "NG", "DZ", "MA", "KE", "CD", "AO", "SD", "SO", "TN", "LY", "IN", "BD", "NP", "IR", "IL"];
       const userCountryCode = data.country_code;
       const userIP = data.ip;
@@ -1108,7 +1107,7 @@ function launchModel(game){
   <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
   <polyline points="7 10 12 15 17 10" />
   <line x1="12" y1="15" x2="12" y2="3" />
-</svg></button><br/><img src="https://i.ibb.co/0Rptx8km/Picsart-25-06-08-11-36-01-902.png" width="140px" alt="File Safety Verified"/><br/><button class="insta-button" onclick="toggleGuide()">
+</svg></button><br/><p style="font-size:15px;text-align:center">Download may require human verification by completing an offer.</p><br/><img src="https://i.ibb.co/0Rptx8km/Picsart-25-06-08-11-36-01-902.png" width="140px" alt="File Safety Verified"/><br/><button class="insta-button" onclick="toggleGuide()">
     <!-- SVG Icon -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path d="M12 16l4-5h-3V4h-2v7H8l4 5zM4 18h16v2H4z"/>
