Update file via uploader

--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@ if (allowOverride) {
       .site-wrapper{border: none;}
     }
 header{
-      color: white;
       padding: 10px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
-      background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-      background-size: 220% 200%;
+      background: linear-gradient(135deg, #41be25, #37cb30);
+      background-size: 200% 200%;
       animation: gradientShift 10s ease infinite;
       color: #fff;
       text-align: center;
