Update file via uploader

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ header{
       padding: 10px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
-      background: linear-gradient(135deg, #41be25, #37cb30);
+      background: linear-gradient(135deg, #41be25, var(--primary-color));
       background-size: 200% 200%;
       animation: gradientShift 10s ease infinite;
       color: #fff;
