Update file via uploader

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ header{
       padding: 10px 20px;
       justify-content: space-between;
       flex-wrap: wrap;
-      background: linear-gradient(135deg, #41be25, var(--primary-color));
+      background: linear-gradient(85deg, #03b955, var(--primary-color));
       background-size: 200% 200%;
       animation: gradientShift 10s ease infinite;
       color: #fff;
@@ -122,6 +122,13 @@ header{
       top: 50%;
       right: 20px;
       transform: translateY(-50%);
+      border: 0.2px solid #d7f5d6;
+      padding: 6px 8px;
+      background: rgba(0,0,0,0.1);
+      text-align: center;
+      vertical-align: middle;
+      border-radius: 10px;
+      white-space: nowrap;
     }
 .loader {
   border: 6px solid #f3f3f3;
