--- a/index.html
+++ b/index.html
@@ -134,8 +134,16 @@ header::after {
     }
     .logo-section img{
       height: 60px;
-     scale: 1.12;
-    }
+     scale: 1.15;
+  opacity: 0;
+  animation: fadeIn 3s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
     .toggle-section {
       cursor: pointer;
       position: absolute;
